--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,8 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-9.0.89"/>
+	<classpathentry kind="lib" path="C:/Users/Usuario/eclipse-workspace/Vinos/libs/apache-tomcat-9.0.89/bin/bootstrap.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Usuario/eclipse-workspace/Vinos/libs/apache-tomcat-9.0.89/bin/commons-daemon.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Usuario/eclipse-workspace/Vinos/libs/apache-tomcat-9.0.89/bin/tomcat-juli.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
